--- a/Mp3App/Features/Search/SearchViewController.storyboard
+++ b/Mp3App/Features/Search/SearchViewController.storyboard
@@ -1,8 +1,9 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="16097.3" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="8Wq-2v-ea4">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="15705" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="8Wq-2v-ea4">
     <device id="retina6_1" orientation="portrait" appearance="light"/>
     <dependencies>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="16087"/>
+        <deployment identifier="iOS"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="15706"/>
         <capability name="Safe area layout guides" minToolsVersion="9.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
@@ -10,7 +11,7 @@
         <!--Search View Controller-->
         <scene sceneID="DUL-qy-yKL">
             <objects>
-                <viewController id="8Wq-2v-ea4" customClass="SearchViewController" customModule="RxSwiftCoordinator" customModuleProvider="target" sceneMemberID="viewController">
+                <viewController id="8Wq-2v-ea4" customClass="SearchViewController" customModule="Mp3App" customModuleProvider="target" sceneMemberID="viewController">
                     <view key="view" contentMode="scaleToFill" id="u1X-oz-7vd">
                         <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
@@ -21,14 +22,37 @@
                                 <nil key="textColor"/>
                                 <nil key="highlightedColor"/>
                             </label>
+                            <searchBar contentMode="redraw" translatesAutoresizingMaskIntoConstraints="NO" id="SV9-Cb-AiY">
+                                <rect key="frame" x="10" y="54" width="394" height="44"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="44" id="cHj-6j-GRY"/>
+                                </constraints>
+                                <textInputTraits key="textInputTraits"/>
+                            </searchBar>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Iu9-Zv-AEL">
+                                <rect key="frame" x="10" y="108" width="394" height="21"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                <nil key="textColor"/>
+                                <nil key="highlightedColor"/>
+                            </label>
                         </subviews>
                         <color key="backgroundColor" systemColor="systemBackgroundColor" cocoaTouchSystemColor="whiteColor"/>
                         <constraints>
+                            <constraint firstItem="Iu9-Zv-AEL" firstAttribute="top" secondItem="SV9-Cb-AiY" secondAttribute="bottom" constant="10" id="67J-1e-gHG"/>
+                            <constraint firstAttribute="trailing" secondItem="SV9-Cb-AiY" secondAttribute="trailing" constant="10" id="KKj-cc-9im"/>
+                            <constraint firstItem="SV9-Cb-AiY" firstAttribute="top" secondItem="Sc0-h5-sWg" secondAttribute="top" constant="10" id="RFw-LX-Pzd"/>
+                            <constraint firstItem="Sc0-h5-sWg" firstAttribute="trailing" secondItem="Iu9-Zv-AEL" secondAttribute="trailing" constant="10" id="ZHK-lZ-uyx"/>
+                            <constraint firstItem="Iu9-Zv-AEL" firstAttribute="leading" secondItem="Sc0-h5-sWg" secondAttribute="leading" constant="10" id="afc-nQ-HU5"/>
+                            <constraint firstItem="SV9-Cb-AiY" firstAttribute="leading" secondItem="Sc0-h5-sWg" secondAttribute="leading" constant="10" id="qDB-u7-KMc"/>
                             <constraint firstItem="z6h-F2-KZW" firstAttribute="centerY" secondItem="u1X-oz-7vd" secondAttribute="centerY" id="vKv-9D-hwT"/>
                             <constraint firstItem="z6h-F2-KZW" firstAttribute="centerX" secondItem="u1X-oz-7vd" secondAttribute="centerX" id="yVN-cl-VSc"/>
                         </constraints>
                         <viewLayoutGuide key="safeArea" id="Sc0-h5-sWg"/>
                     </view>
+                    <connections>
+                        <outlet property="label" destination="Iu9-Zv-AEL" id="0OJ-gM-F4N"/>
+                        <outlet property="searchBar" destination="SV9-Cb-AiY" id="eIy-68-Wer"/>
+                    </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="ueZ-Xf-aDi" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
             </objects>
