--- a/Mp3App/Features/Search/SearchViewController.storyboard
+++ b/Mp3App/Features/Search/SearchViewController.storyboard
@@ -16,41 +16,33 @@
                         <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
-                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Search" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="z6h-F2-KZW">
-                                <rect key="frame" x="162" y="430" width="90.5" height="36"/>
-                                <fontDescription key="fontDescription" type="system" pointSize="30"/>
-                                <nil key="textColor"/>
-                                <nil key="highlightedColor"/>
-                            </label>
                             <searchBar contentMode="redraw" translatesAutoresizingMaskIntoConstraints="NO" id="SV9-Cb-AiY">
                                 <rect key="frame" x="10" y="54" width="394" height="44"/>
+                                <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                 <constraints>
                                     <constraint firstAttribute="height" constant="44" id="cHj-6j-GRY"/>
                                 </constraints>
                                 <textInputTraits key="textInputTraits"/>
                             </searchBar>
-                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Iu9-Zv-AEL">
-                                <rect key="frame" x="10" y="108" width="394" height="21"/>
-                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
-                                <nil key="textColor"/>
-                                <nil key="highlightedColor"/>
-                            </label>
+                            <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="Prc-xW-Eot">
+                                <rect key="frame" x="0.0" y="108" width="414" height="754"/>
+                                <color key="backgroundColor" systemColor="systemBackgroundColor" cocoaTouchSystemColor="whiteColor"/>
+                            </view>
                         </subviews>
                         <color key="backgroundColor" systemColor="systemBackgroundColor" cocoaTouchSystemColor="whiteColor"/>
                         <constraints>
-                            <constraint firstItem="Iu9-Zv-AEL" firstAttribute="top" secondItem="SV9-Cb-AiY" secondAttribute="bottom" constant="10" id="67J-1e-gHG"/>
+                            <constraint firstItem="Prc-xW-Eot" firstAttribute="top" secondItem="SV9-Cb-AiY" secondAttribute="bottom" constant="10" id="9fi-FZ-JQ0"/>
+                            <constraint firstItem="Prc-xW-Eot" firstAttribute="leading" secondItem="Sc0-h5-sWg" secondAttribute="leading" id="Cd2-PP-MZW"/>
                             <constraint firstAttribute="trailing" secondItem="SV9-Cb-AiY" secondAttribute="trailing" constant="10" id="KKj-cc-9im"/>
+                            <constraint firstItem="Sc0-h5-sWg" firstAttribute="trailing" secondItem="Prc-xW-Eot" secondAttribute="trailing" id="Ptu-kj-wpA"/>
                             <constraint firstItem="SV9-Cb-AiY" firstAttribute="top" secondItem="Sc0-h5-sWg" secondAttribute="top" constant="10" id="RFw-LX-Pzd"/>
-                            <constraint firstItem="Sc0-h5-sWg" firstAttribute="trailing" secondItem="Iu9-Zv-AEL" secondAttribute="trailing" constant="10" id="ZHK-lZ-uyx"/>
-                            <constraint firstItem="Iu9-Zv-AEL" firstAttribute="leading" secondItem="Sc0-h5-sWg" secondAttribute="leading" constant="10" id="afc-nQ-HU5"/>
+                            <constraint firstItem="Sc0-h5-sWg" firstAttribute="bottom" secondItem="Prc-xW-Eot" secondAttribute="bottom" id="Ufn-vx-Jrb"/>
                             <constraint firstItem="SV9-Cb-AiY" firstAttribute="leading" secondItem="Sc0-h5-sWg" secondAttribute="leading" constant="10" id="qDB-u7-KMc"/>
-                            <constraint firstItem="z6h-F2-KZW" firstAttribute="centerY" secondItem="u1X-oz-7vd" secondAttribute="centerY" id="vKv-9D-hwT"/>
-                            <constraint firstItem="z6h-F2-KZW" firstAttribute="centerX" secondItem="u1X-oz-7vd" secondAttribute="centerX" id="yVN-cl-VSc"/>
                         </constraints>
                         <viewLayoutGuide key="safeArea" id="Sc0-h5-sWg"/>
                     </view>
                     <connections>
-                        <outlet property="label" destination="Iu9-Zv-AEL" id="0OJ-gM-F4N"/>
+                        <outlet property="resultContainerView" destination="Prc-xW-Eot" id="ZQz-bJ-JIK"/>
                         <outlet property="searchBar" destination="SV9-Cb-AiY" id="eIy-68-Wer"/>
                     </connections>
                 </viewController>
