--- a/Mp3App/Features/Play/Audio/AudioPlayerView.xib
+++ b/Mp3App/Features/Play/Audio/AudioPlayerView.xib
@@ -18,7 +18,7 @@
             <rect key="frame" x="0.0" y="0.0" width="414" height="736"/>
             <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
             <subviews>
-                <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="player_icon_cdcover_small_Normal" translatesAutoresizingMaskIntoConstraints="NO" id="EJg-Hc-HH7">
+                <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="player_icon_cdcover_small_Normal" translatesAutoresizingMaskIntoConstraints="NO" id="EJg-Hc-HH7">
                     <rect key="frame" x="40" y="20" width="334" height="334"/>
                     <constraints>
                         <constraint firstAttribute="width" secondItem="EJg-Hc-HH7" secondAttribute="height" id="sbl-DC-WfJ"/>
