--- a/Mp3App/Features/Search/Result/Track/TrackResultCell.xib
+++ b/Mp3App/Features/Search/Result/Track/TrackResultCell.xib
@@ -1,9 +1,9 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="15705" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="16097.2" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES">
     <device id="retina6_1" orientation="portrait" appearance="light"/>
     <dependencies>
         <deployment identifier="iOS"/>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="15706"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="16087"/>
         <capability name="Safe area layout guides" minToolsVersion="9.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
@@ -71,6 +71,7 @@
             <connections>
                 <outlet property="albumImageView" destination="7js-2P-UjZ" id="GHF-5W-Iue"/>
                 <outlet property="descriptionLabel" destination="ERT-vy-H88" id="1JY-OJ-79h"/>
+                <outlet property="optionButton" destination="ukV-79-jG9" id="BX7-cS-aB7"/>
                 <outlet property="titleLabel" destination="MY2-MI-Iv8" id="hYT-Uw-gJi"/>
             </connections>
             <point key="canvasLocation" x="133.33333333333334" y="161.71875"/>
