--- a/Mp3App/Features/Tracks/TracksDetailCell.xib
+++ b/Mp3App/Features/Tracks/TracksDetailCell.xib
@@ -1,9 +1,9 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="15705" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="16097.2" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES">
     <device id="retina6_1" orientation="portrait" appearance="light"/>
     <dependencies>
         <deployment identifier="iOS"/>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="15706"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="16087"/>
         <capability name="Safe area layout guides" minToolsVersion="9.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
@@ -39,7 +39,7 @@
                                 <nil key="highlightedColor"/>
                             </label>
                             <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="BXW-CS-JOU">
-                                <rect key="frame" x="240" y="20" width="36" height="40"/>
+                                <rect key="frame" x="258" y="20" width="18" height="40"/>
                                 <state key="normal" image="accessory_more_black_normal_Normal"/>
                             </button>
                         </subviews>
@@ -71,6 +71,7 @@
             <connections>
                 <outlet property="albumImageView" destination="xzj-d7-bNO" id="bZM-Zz-FSE"/>
                 <outlet property="descriptionLabel" destination="dQX-ee-zyX" id="ZEh-0J-kh9"/>
+                <outlet property="optionButton" destination="BXW-CS-JOU" id="no4-AU-2G8"/>
                 <outlet property="titleLabel" destination="LaJ-kg-p3i" id="WDh-kR-tT2"/>
             </connections>
             <point key="canvasLocation" x="136.23188405797103" y="165.40178571428569"/>
