--- a/Mp3App/Features/Play/TrackInfor/Cell/TrackCell.xib
+++ b/Mp3App/Features/Play/TrackInfor/Cell/TrackCell.xib
@@ -27,38 +27,38 @@
                                 </constraints>
                             </imageView>
                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Cất em vào tâm tư" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="NYp-xN-HmI">
-                                <rect key="frame" x="57" y="12" width="119" height="17"/>
+                                <rect key="frame" x="57" y="12" width="200.5" height="17"/>
                                 <fontDescription key="fontDescription" type="system" pointSize="14"/>
                                 <color key="textColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                 <nil key="highlightedColor"/>
                             </label>
                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="2b4-Es-xhc">
-                                <rect key="frame" x="57" y="40.5" width="203" height="14.5"/>
+                                <rect key="frame" x="57" y="40.5" width="200.5" height="14.5"/>
                                 <fontDescription key="fontDescription" type="system" pointSize="12"/>
                                 <color key="textColor" red="0.62501472229999999" green="0.64630973339999997" blue="0.69776517149999995" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                 <nil key="highlightedColor"/>
                             </label>
-                            <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="carplay_song_ico_Normal" translatesAutoresizingMaskIntoConstraints="NO" id="7Mo-Je-NMt">
-                                <rect key="frame" x="263" y="15" width="37" height="37"/>
-                                <color key="tintColor" systemColor="systemGreenColor" red="0.20392156859999999" green="0.78039215689999997" blue="0.34901960780000002" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                            <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="nsM-g8-uus" customClass="NVActivityIndicatorView" customModule="NVActivityIndicatorView">
+                                <rect key="frame" x="267.5" y="20" width="32.5" height="27"/>
+                                <color key="backgroundColor" systemColor="systemBackgroundColor" cocoaTouchSystemColor="whiteColor"/>
                                 <constraints>
-                                    <constraint firstAttribute="width" secondItem="7Mo-Je-NMt" secondAttribute="height" id="qrW-mE-dLf"/>
+                                    <constraint firstAttribute="width" secondItem="nsM-g8-uus" secondAttribute="height" multiplier="1.2" id="9eG-Kv-Mmw"/>
                                 </constraints>
-                            </imageView>
+                            </view>
                         </subviews>
                         <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                         <constraints>
                             <constraint firstItem="NYp-xN-HmI" firstAttribute="leading" secondItem="Jvf-sk-o55" secondAttribute="trailing" constant="10" id="A9H-RM-1Km"/>
                             <constraint firstAttribute="bottom" secondItem="2b4-Es-xhc" secondAttribute="bottom" constant="12" id="F4A-go-A1o"/>
+                            <constraint firstItem="nsM-g8-uus" firstAttribute="top" secondItem="grg-l7-Lye" secondAttribute="top" constant="20" id="GGW-Uk-lvA"/>
+                            <constraint firstAttribute="bottom" secondItem="nsM-g8-uus" secondAttribute="bottom" constant="20" id="KOT-TB-vJa"/>
+                            <constraint firstItem="nsM-g8-uus" firstAttribute="leading" secondItem="NYp-xN-HmI" secondAttribute="trailing" constant="10" id="Ojs-6I-0Yt"/>
                             <constraint firstItem="2b4-Es-xhc" firstAttribute="leading" secondItem="Jvf-sk-o55" secondAttribute="trailing" constant="10" id="Pj8-tn-AXY"/>
-                            <constraint firstAttribute="bottom" secondItem="7Mo-Je-NMt" secondAttribute="bottom" constant="15" id="Qys-H8-N23"/>
-                            <constraint firstItem="7Mo-Je-NMt" firstAttribute="top" secondItem="grg-l7-Lye" secondAttribute="top" constant="15" id="RIe-lT-dMq"/>
                             <constraint firstItem="Jvf-sk-o55" firstAttribute="leading" secondItem="grg-l7-Lye" secondAttribute="leading" id="Uy7-Vk-AcA"/>
+                            <constraint firstItem="nsM-g8-uus" firstAttribute="leading" secondItem="2b4-Es-xhc" secondAttribute="trailing" constant="10" id="acP-rp-G4R"/>
                             <constraint firstItem="Jvf-sk-o55" firstAttribute="top" secondItem="grg-l7-Lye" secondAttribute="top" constant="10" id="ePc-kn-AML"/>
-                            <constraint firstAttribute="trailing" secondItem="2b4-Es-xhc" secondAttribute="trailing" constant="50" id="hzb-ha-poC"/>
-                            <constraint firstAttribute="trailing" relation="greaterThanOrEqual" secondItem="NYp-xN-HmI" secondAttribute="trailing" constant="50" id="iUn-Zu-vY9"/>
-                            <constraint firstAttribute="trailing" secondItem="7Mo-Je-NMt" secondAttribute="trailing" constant="10" id="ljc-QF-tY9"/>
                             <constraint firstAttribute="bottom" secondItem="Jvf-sk-o55" secondAttribute="bottom" constant="10" id="mVy-7m-aqf"/>
+                            <constraint firstAttribute="trailing" secondItem="nsM-g8-uus" secondAttribute="trailing" constant="10" id="oqX-Zl-til"/>
                             <constraint firstItem="NYp-xN-HmI" firstAttribute="top" secondItem="grg-l7-Lye" secondAttribute="top" constant="12" id="teg-vG-yPw"/>
                         </constraints>
                     </view>
@@ -74,7 +74,7 @@
             <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
             <viewLayoutGuide key="safeArea" id="njF-e1-oar"/>
             <connections>
-                <outlet property="playImageView" destination="7Mo-Je-NMt" id="gY4-fk-vcK"/>
+                <outlet property="audioEqualizer" destination="nsM-g8-uus" id="Psv-oF-Q5B"/>
                 <outlet property="singerLabel" destination="2b4-Es-xhc" id="sfB-rW-Qgk"/>
                 <outlet property="titleLabel" destination="NYp-xN-HmI" id="qfF-NM-YcT"/>
                 <outlet property="trackImageView" destination="Jvf-sk-o55" id="slV-XF-40F"/>
@@ -84,6 +84,5 @@
     </objects>
     <resources>
         <image name="Artboard_Normal" width="100" height="100"/>
-        <image name="carplay_song_ico_Normal" width="100" height="100"/>
     </resources>
 </document>
