--- a/Mp3App/Features/Play/PlayerViewController.storyboard
+++ b/Mp3App/Features/Play/PlayerViewController.storyboard
@@ -1,9 +1,9 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="16097.2" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="DWQ-Md-4bU">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="15705" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="DWQ-Md-4bU">
     <device id="retina5_5" orientation="portrait" appearance="light"/>
     <dependencies>
         <deployment identifier="iOS"/>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="16087"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="15706"/>
         <capability name="Safe area layout guides" minToolsVersion="9.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
@@ -234,6 +234,12 @@
                                                 <color key="textColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                                 <nil key="highlightedColor"/>
                                             </label>
+                                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="DnS-t3-vzm">
+                                                <rect key="frame" x="234" y="10" width="170" height="30"/>
+                                                <constraints>
+                                                    <constraint firstAttribute="width" constant="170" id="isy-Yn-kz6"/>
+                                                </constraints>
+                                            </button>
                                         </subviews>
                                         <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                         <constraints>
@@ -242,8 +248,11 @@
                                             <constraint firstAttribute="bottom" secondItem="P2f-qm-N66" secondAttribute="bottom" constant="5" id="Dys-fb-Q1i"/>
                                             <constraint firstAttribute="trailing" secondItem="Zjd-dL-V7J" secondAttribute="trailing" constant="20" id="IDd-fA-KWM"/>
                                             <constraint firstItem="P2f-qm-N66" firstAttribute="leading" secondItem="P4L-Ku-ZGn" secondAttribute="leading" constant="10" id="KCW-bJ-j1X"/>
+                                            <constraint firstAttribute="bottom" secondItem="DnS-t3-vzm" secondAttribute="bottom" constant="10" id="Oqj-nV-baD"/>
                                             <constraint firstItem="PEb-Mx-TDT" firstAttribute="centerY" secondItem="P4L-Ku-ZGn" secondAttribute="centerY" id="TYM-yh-WKf"/>
                                             <constraint firstItem="P2f-qm-N66" firstAttribute="top" secondItem="P4L-Ku-ZGn" secondAttribute="top" constant="5" id="UAf-SK-vNB"/>
+                                            <constraint firstAttribute="trailing" secondItem="DnS-t3-vzm" secondAttribute="trailing" constant="10" id="Xv3-Me-vfb"/>
+                                            <constraint firstItem="DnS-t3-vzm" firstAttribute="top" secondItem="P4L-Ku-ZGn" secondAttribute="top" constant="10" id="a76-yi-NxP"/>
                                             <constraint firstItem="Zjd-dL-V7J" firstAttribute="leading" secondItem="gdj-CO-7u2" secondAttribute="trailing" constant="10" id="epb-xB-MqY"/>
                                             <constraint firstItem="PEb-Mx-TDT" firstAttribute="leading" secondItem="P4L-Ku-ZGn" secondAttribute="leading" constant="20" id="lo7-4b-994"/>
                                             <constraint firstAttribute="height" constant="50" id="nkR-Tj-j0H"/>
@@ -414,6 +423,7 @@
                     </view>
                     <connections>
                         <outlet property="addTrackToFavouriteButton" destination="P2f-qm-N66" id="DTv-0W-zK0"/>
+                        <outlet property="addTrackToPlaylistButton" destination="DnS-t3-vzm" id="U0Y-63-yms"/>
                         <outlet property="audioPlayerView" destination="p8g-WH-a9J" id="477-t7-EJ5"/>
                         <outlet property="containerBottomView" destination="P4L-Ku-ZGn" id="xE0-ei-cOS"/>
                         <outlet property="controlPlayerView" destination="UPV-Tj-dg0" id="hkZ-dF-C4a"/>
