--- a/Mp3App/Features/Search/SearchViewController.storyboard
+++ b/Mp3App/Features/Search/SearchViewController.storyboard
@@ -48,11 +48,20 @@
                                 <color key="backgroundColor" systemColor="systemBackgroundColor" cocoaTouchSystemColor="whiteColor"/>
                                 <color key="sectionIndexBackgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                             </tableView>
+                            <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="A1F-QH-oeE" customClass="NVActivityIndicatorView" customModule="NVActivityIndicatorView">
+                                <rect key="frame" x="364" y="64" width="20" height="20"/>
+                                <color key="backgroundColor" systemColor="systemGreenColor" red="0.20392156859999999" green="0.78039215689999997" blue="0.34901960780000002" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="20" id="5GI-GY-WI5"/>
+                                    <constraint firstAttribute="width" constant="20" id="a10-KX-UpF"/>
+                                </constraints>
+                            </view>
                         </subviews>
                         <color key="backgroundColor" systemColor="systemBackgroundColor" cocoaTouchSystemColor="whiteColor"/>
                         <constraints>
                             <constraint firstItem="ggH-Of-f89" firstAttribute="centerX" secondItem="Sc0-h5-sWg" secondAttribute="centerX" id="0u3-aU-Hrt"/>
                             <constraint firstItem="4O0-D5-2aj" firstAttribute="top" secondItem="Sc0-h5-sWg" secondAttribute="top" constant="10" id="4wG-eD-N2b"/>
+                            <constraint firstItem="A1F-QH-oeE" firstAttribute="centerY" secondItem="4O0-D5-2aj" secondAttribute="centerY" id="8M2-Mr-ABX"/>
                             <constraint firstItem="ggH-Of-f89" firstAttribute="centerY" secondItem="Sc0-h5-sWg" secondAttribute="centerY" id="9Wf-Ps-ngy"/>
                             <constraint firstItem="Ugj-Hx-sKf" firstAttribute="leading" secondItem="Sc0-h5-sWg" secondAttribute="leading" constant="30" id="C9i-p5-AvL"/>
                             <constraint firstItem="Prc-xW-Eot" firstAttribute="leading" secondItem="Sc0-h5-sWg" secondAttribute="leading" id="Cd2-PP-MZW"/>
@@ -64,6 +73,7 @@
                             <constraint firstItem="Sc0-h5-sWg" firstAttribute="trailing" secondItem="wMG-RN-o1W" secondAttribute="trailing" id="cjV-Ak-5XT"/>
                             <constraint firstItem="wMG-RN-o1W" firstAttribute="leading" secondItem="Sc0-h5-sWg" secondAttribute="leading" id="hZa-E4-XU8"/>
                             <constraint firstItem="Prc-xW-Eot" firstAttribute="top" secondItem="4O0-D5-2aj" secondAttribute="bottom" constant="10" id="jAU-BD-rmA"/>
+                            <constraint firstItem="Sc0-h5-sWg" firstAttribute="trailing" secondItem="A1F-QH-oeE" secondAttribute="trailing" constant="30" id="tv2-l9-0Im"/>
                             <constraint firstItem="Sc0-h5-sWg" firstAttribute="bottom" secondItem="wMG-RN-o1W" secondAttribute="bottom" id="yZY-2l-Uif"/>
                             <constraint firstItem="Sc0-h5-sWg" firstAttribute="trailing" secondItem="4O0-D5-2aj" secondAttribute="trailing" constant="20" id="yjQ-uc-K3P"/>
                             <constraint firstItem="wMG-RN-o1W" firstAttribute="top" secondItem="4O0-D5-2aj" secondAttribute="bottom" id="zvE-iT-vvL"/>
@@ -72,6 +82,7 @@
                     </view>
                     <connections>
                         <outlet property="historyTableView" destination="wMG-RN-o1W" id="CzX-EZ-I5K"/>
+                        <outlet property="loadingIndicatorView" destination="A1F-QH-oeE" id="xTH-Dp-gOW"/>
                         <outlet property="resultContainerView" destination="Prc-xW-Eot" id="ZQz-bJ-JIK"/>
                         <outlet property="searchTextField" destination="4O0-D5-2aj" id="F1d-D0-R9O"/>
                     </connections>
